--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +8,72 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
-  <nav>
-    <a href="/">Page analyzer</a>
-    <a href="/urls">Web page</a>
-  </nav>
-  <h1>Page analyzer</h1>
+  <header>
+    <nav class="navbar navbar-expand navbar-dark border-bottom bg-body-tertiary">
+      <div class="container-fluid justify-content-between">
+        
+        <ul class="navbar-nav align-items-center m-auto">
+  
+          <li class="nav-item">
+            <a href="/" class="navbar-brand ">Page analyzer</a>
+          </li>
+  
+          <li class="nav-item">
+            <a href="/urls" class="nav-link">URLs</a>
+          </li>
+  
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Language
+              </a>
+              
+              <ul class="dropdown-menu">
+                <li"><a class="dropdown-item" href="/">English</a></li>
+                <li"><a class="dropdown-item" href="/ru">Русский</a></li>
+              </ul>
+  
+            </li>
+          </li>
+        </ul>
+  
+      </div>
+    </nav>
+  </header>
 
+  <main class="">
+    <div class="container-lg mt-5">
+      <div class="row">
+        <div class="col-12 col-md-10 col-lg-6 mx-auto rounded border bg-light-subtle p-5">
+          <h1>Web page analyzer</h1>
+          <p>Validate web page SEO-adaptiveness</p>
+          
+          <form class="d-flex justify-content-center" action="/urls">
+            <label for="url" class="visually-hidden">
+              URL
+            </label>
+            <input class="form-control" id="url" type="url" placeholder="https://example.com">
+            <input class="btn btn-outline-info btn-dark ms-3" type="submit" value="VALIDATE">
+          </form>
+        </div>
+      </div>
+    </div>
+  </main>
+  
+  <footer class="fixed-bottom navbar navbar-expand justify-content-center border-top bg-dark-subtle">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="https://github.com/DREU007/page-analyzer">
+          Github
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://hexlet.io/">
+          Hexlet
+        </a>
+      </li>
+    </ul>
+    
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
