--- a/page_analyzer/templates/404.html
+++ b/page_analyzer/templates/404.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
 {% block title%}404{% endblock %}
 {% block main %}
-  <img class="d-inline-block vw-100 vh-100 text-center py-5" src="https://httpcats.com/404.jpg" alt="404 Page not found">
+  <img class="" src="https://httpcats.com/404.jpg" alt="404 Page not found">
 {% endblock %}
