--- a/page_analyzer/templates/url_id.html
+++ b/page_analyzer/templates/url_id.html
@@ -1,4 +1,13 @@
 {% extends "base.html" %}
 {% block main %}
+  {% if messages %}
+  <div>
+    <ul class="alert">
+      {% for category, message in messages %}
+        <li class="list-unstyled alert alert-{{ category }}">{{ message }}</li>
+      {% endfor %}
+    </ul>
+  </div>
+  {% endif %}
   <div class="text-center fw-bold">{{ url_data }}</div>
 {% endblock %}
