--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -3,9 +3,9 @@
   {% block flash %}
     {% if messages %}
         <div>
-          <ul class="alert">
+          <ul class="list-group">
             {% for category, message in messages %}
-              <li class="list-unstyled alert alert-{{ category }}">{{ kv_dict.flash[message] }}</li>
+              <li class="list-group-item list-group-item-{{ category }}">{{ kv_dict.flash[message] }}</li>
             {% endfor %}
           </ul>
         </div>
