--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -11,14 +11,16 @@
         <th>{{ table.updated_at }}</th>
         <th>{{ table.code }}</th>
       </thead>
-      {% for row in table_data %} <!-- Pagenation could be required later -->
-        <tbody>
-            <td>{{ row.id }}</td>
-            <td><a href="/urls/{{ row.id }}">{{ row.name }}</a></td>
-            <td></td>
-            <td></td>
-        </tbody>
-      {% endfor %}
+      {% if table_data %}
+        {% for row in table_data %} <!-- Pagenation could be required later -->
+	  <tbody>
+     	    <td>{{ row.id }}</td>
+     	    <td><a href="/urls/{{ row.id }}">{{ row.name }}</a></td>
+     	    <td></td>
+     	    <td></td>
+     	  </tbody>
+     	{% endfor %}
+      {% endif %}
      </table>
   
   </div>
