--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -16,8 +16,8 @@
 	  <tbody>
      	    <td>{{ row.id }}</td>
      	    <td><a href="/urls/{{ row.id }}">{{ row.name }}</a></td>
-     	    <td></td>
-     	    <td></td>
+     	    <td>{{ row.created_at or "" }}</td>
+     	    <td>{{ row.status_code or "" }}</td>
      	  </tbody>
      	{% endfor %}
       {% endif %}
