--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -22,7 +22,7 @@
             url
           </label>
           <input class="form-control" id="url" name="url" value="" type="text" placeholder="https://example.com">
-          <input class="btn btn-outline-info btn-dark ms-3" type="submit" value="{{ kv_dict.button['btn-start-validation'] }}">
+          <input class="btn btn-outline-info btn-dark ms-3" type="submit" value="{{ kv_dict.button['btn-check'] }}">
         </form>
       </div>
     </div>
