--- a/page_analyzer/templates/url_id.html
+++ b/page_analyzer/templates/url_id.html
@@ -22,10 +22,10 @@
       </tbody>
     </table>
 
-    <h1 class="pt-5">{{ kv_dict.validations }}</h1>
+    <h1 class="pt-5">{{ kv_dict.checks }}</h1>
     <form action="/urls/{{ url_data.id }}/checks" method="post">
-      <label class="visually-hidden" for="btn-start-validation">start validation</label>
-      <input class="btn btn-outline-info btn-dark my-2" id="btn-start-validation" type="submit" value="{{ kv_dict.button['btn-start-validation'] }}">
+      <label class="visually-hidden" for="btn-start-check">start check</label>
+      <input class="btn btn-outline-info btn-dark my-2" id="btn-start-check" type="submit" value="{{ kv_dict.button['btn-start-check'] }}">
     </form>
     <table class="table table-dark table-striped table-bordered" data-test="checks">
       <thead>
@@ -40,7 +40,7 @@
         {% for row in url_checks %}
           <tbody>
             <th>{{ row.id }}</th>
-            <th>{{ row.code }}</th>
+            <th>{{ row.status_code }}</th>
             <th>{{ row.h1 }}</th>
             <th>{{ row.title }}</th>
             <th>{{ row.description }}</th>
