--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -15,7 +15,7 @@
         {% for row in table_data %} <!-- Pagenation could be required later -->
 	  <tbody>
      	    <td>{{ row.id }}</td>
-     	    <td><a href="/urls/{{ row.id }}">{{ row.name }}</a></td>
+	    <td><a href="{{ url_for('get_url_id', url_id=row.id) }}">{{ row.name }}</a></td>
      	    <td>{{ row.created_at or "" }}</td>
      	    <td>{{ row.status_code or "" }}</td>
      	  </tbody>
